--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
   </head>
   <body>
     <!-- nav bar like no other -->
-    <nav class="navbar">
-      <div class="logo">
+    <nav>
+      <div class="navbar">
         <img src="images/gene logo.png" alt="logo" />
-        <div class="navtags">
-          <ul>
-            <li>Home</li>
-            <li>Solution</li>
-            <li>Your work</li>
-            <li>Company</li>
-          </ul>
-          <button type="button" class="buttons">Request a Demo</button>
-        </div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Solution</a></li>
+          <li><a href="#">Your work</a></li>
+          <li><a href="#">Company</a></li>
+        </ul>
+        <button type="button" class="buttons">Request a Demo</button>
       </div>
     </nav>
     <!-- first landing page -->
@@ -28,8 +26,8 @@
       <h1>The World's Leading Business Valuation Software</h1>
       <p>
         Valutico provides the financial services industry and valuation experts
-        with data-driven to perform accurate company valuations faster and more
-        accurately than ever before.
+        with data-driven to perform <br />
+        company valuations faster and more accurately than ever before.
       </p>
       <div class="button_container">
         <button type="button" class="buttons">Request a Demo</button>
@@ -41,47 +39,48 @@
     </div>
     <!-- firms worked with page -->
     <div class="worked_with">
-      <h3>Trusted by Hundreds of Financial Firms in 75 Countries</h3>
+      <h2>Trusted by Hundreds of Financial Firms in 75 Countries</h2>
       <p>
         Our team of more than 50 employees is globally distributed and serves
-        both national and international clients in over 75 countries.
+        both national and international clients in <br />
+        over 75 countries.
       </p>
       <!-- logo of firms valutico have worked with -->
       <div class="firm_logo">
-        <div class="firm_1">
+        <div class="firm">
           <img src="images/genie 1.png" alt="firm" />
         </div>
-        <div class="firm_2">
+        <div class="firm">
           <img src="images/genie 2.png" alt="firm" />
         </div>
-        <div class="firm_3">
+        <div class="firm">
           <img src="images/genie 3.png" alt="firm" />
         </div>
-        <div class="firm_4">
+        <div class="firm">
           <img src="images/genie 4.png" alt="firm" />
         </div>
-        <div class="firm_5">
+        <div class="firm">
           <img src="images/genie 5.png" alt="firm" />
         </div>
-        <div class="firm_6">
+        <div class="firm">
           <img src="images/genie 6.png" alt="firm" />
         </div>
-        <div class="firm_7">
+        <div class="firm">
           <img src="images/genie 7.png" alt="firm" />
         </div>
-        <div class="firm_8">
+        <div class="firm">
           <img src="images/genie 8.png" alt="firm" />
         </div>
-        <div class="firm_10">
+        <div class="firm">
           <img src="images/genie 9.png" alt="firm" />
         </div>
-        <div class="firm_2">
+        <div class="firm">
           <img src="images/genie 10.png" alt="firm" />
         </div>
-        <div class="firm_11">
+        <div class="firm">
           <img src="images/genie 11.png" alt="firm" />
         </div>
-        <div class="firm_12">
+        <div class="firm">
           <img src="images/genie 12.png" alt="firm" />
         </div>
       </div>
@@ -92,28 +91,30 @@
       <h2>Why Valutico?</h2>
       <p>
         An award-winning fintech providing a range of company valuation
-        solutions, Valutico provides the financial services industry and
-        valuation experts with data-driven tools.
+        solutions, Valutico provides <br />
+        the financial services industry and valuation experts with data-driven
+        tools.
       </p>
+      <div class="col">
+        <div class="principles_col">
+          <h4>Secure</h4>
+          <p>
+            Private by default, creating a safe space around your projects and
+            your data.
+          </p>
+        </div>
 
-      <div class="principles_col">
-        <h4>Secure</h4>
-        <p>
-          Private by default, creating a safe space around your projects and
-          your data.
-        </p>
-      </div>
+        <div class="principles_col">
+          <h4>Reliable</h4>
+          <p>Created by valuation experts for valuation professionals.</p>
+        </div>
 
-      <div class="principles_col">
-        <h4>Reliable</h4>
-        <p>Created by valuation experts for valuation professionals.</p>
-      </div>
-
-      <div class="principles_col">
-        <h4>Dedicated to success</h4>
-        <p>
-          24/7 support and multi-language capabilities to support your needs.
-        </p>
+        <div class="principles_col">
+          <h4>Dedicated to success</h4>
+          <p>
+            24/7 support and multi-language capabilities to support your needs.
+          </p>
+        </div>
       </div>
     </div>
 
