fixed landing page

--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
     <div class="valuation">
       <div class="text_valuation">
         <h3>Accurate Valuation in Minutes</h3>
-        <p>
+        <p id="small">
           Find the company data you need in seconds, with 3TB of global
           financial data featuring almost 1 million transactions and over 50,000
           thousand comparable peers
         </p>
-        <div class="valuation_hows">
+        <div class="valuation_rows">
           <h4>Personalise Your Reports</h4>
           <p>
             Save hours transferring results from spreadsheet to slides, by
@@ -135,7 +135,7 @@
             effortlessly.
           </p>
         </div>
-        <div class="valuation_hows">
+        <div class="valuation_rows">
           <h4>28 Valuation Method Options</h4>
           <p>
             From loss-making companies to mature enterprises, and from startups
@@ -143,7 +143,7 @@
             methods.
           </p>
         </div>
-        <div class="valuation_hows">
+        <div class="valuation_rows">
           <h4>Fast Access to Premium Data</h4>
           <p>
             Access the most highly-trusted global databases of company financial
@@ -155,6 +155,9 @@
       <div class="valuation_img">
         <img src="images/genie 13.jpg" alt="a man writing" />
       </div>
+    </div>
+    <div class="button_container" id="btn">
+      <button type="button" class="buttons">Request a Demo</button>
     </div>
   </body>
 </html>
